--- a/pokedex/pokedex-web/src/ngfrontend/src/index.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/index.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
         <link href="//db.onlinewebfonts.com/c/f4d1593471d222ddebd973210265762a?family=Pokemon" rel="stylesheet" type="text/css"/>
+        <link rel='icon' href='favicon.ico' type='image/x-icon' sizes="16x16" />
+
     <base href="/">
 </head>
 
