--- a/pokedex/pokedex-web/src/ngfrontend/src/index.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/index.html
@@ -18,7 +18,7 @@
     <base href="/">
 </head>
 
-<body id="page-top">
+<body id="page-top" onmouseover="initSbAdmin2()">
   <app-root></app-root> 
 </body>
 <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js"></script> 
